# AcuriteData

./: .gitignore  derived.py  pyproject.toml  requirements.txt  sanity_check.py  server.py
src/acurite_weather/: acurite_api.py  server.py
