[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acurite-weather-mcp"
version = "0.1.0"
description = "MCP server for Acurite Iris weather station data via myacurite.com"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
acurite-weather = "acurite_weather.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/acurite_weather"]
